--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My Skills</h1>
+        <h1 align = "center">My Skills</h1>
     </header>
     <main>
         <h2>Programming Languages</h2>
