Updated About me section

--- a/biography.html
+++ b/biography.html
@@ -21,7 +21,8 @@
         <section>
             <h2>About Me</h2>
             <p>My name is Sushma Telagamsetti, and I am from India. </p>
-            <p>I have completed my bachelors  in Computer Science </p>
+            <p>I have completed my bachelors  in Computer Science. Currently I'm pursuing Full Stack
+                Software Development course in Lambton College, Toronto </p>
         </section>
     </main>
     <footer>
